--- a/backend/.env
+++ b/backend/.env
@@ -8,5 +8,5 @@ CLOUDINARY_API_KEY = "927118695585149"
 CLOUDINARY_SECRET_KEY = "8TrvpQ_70KPF9BFh38AOMvAU6GU"
 CLOUDINARY_NAME = "doqaou1og"
 
-RAZORPAY_KEY_SECRET = '-------- Paste Razorpay Secret key --------'
-RAZORPAY_KEY_ID = '-------- Paste Razorpay key Id --------'
+RAZORPAY_KEY_SECRET = ''
+RAZORPAY_KEY_ID = ''
